fix spacing

--- a/src/Overlay/overlay.scss
+++ b/src/Overlay/overlay.scss
@@ -33,8 +33,7 @@
         span {
             color: #fbfbfb;
             cursor: pointer;
-            padding: 4px 10px;
-            margin: 0 10px;
+            padding: 4px 20px;
             text-transform: uppercase;
             display: inline-block;
 
